--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,21 +4,66 @@
     padding: 20px;
 }
 
-// .nav-item {
-//     padding: 0 15px;
-// }
-
-// header
-// .header{}
-
 .indexpic {
     width: 100%;
 }
 
 
+
+//coursecard
+.fa-solid{
+    color:#0dcaf0;
+}
+
+.coursecard{
+    margin: 30px;
+    padding: 20px;
+    border: 1.5px solid rgb(0, 0, 0);
+    border-radius: 20px;
+}
+
+.dept{
+    background-color: #0dcaf0;
+    padding: 5px;
+    font-weight: 300;
+    font-size: small;
+    border-radius: 10px;
+}
+
+.inst {
+    font-size: small;
+}
+
+.deptandinst{
+    margin: 10px;
+}
+
+.coursedetail{
+    margin: 10px;
+    font-weight: 700;
+}
+
+.LTPC{
+    margin: 10px;
+}
+
+.desc{
+    margin: 10px;
+    color: rgb(102, 100, 100);
+}
+
+.knowmore{
+    margin: 10px;
+}
+
+.tut, .pra, .cre{
+    margin: 0 0 0 20px;
+}
+
+
 // coursebox
 .coursebox {
-    padding: 10px;
+    padding: 20px;
 }
 
 .coursedetails{
@@ -31,30 +76,38 @@
     padding: 10px;
 }
 
-table {
-    margin-left: 20px;
-}
-
-// tr{
-//     border: 1px solid black;
-// }
-
 th{
-    border: 1px solid black;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 5px;
-    padding-bottom: 5px;
     background-color: rgb(119, 114, 114);
     color: antiquewhite;
+    border-bottom: 1px solid black;
 }
 
-td{
+.col-1{
     border: 1px solid black;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    text-align: center;
+    padding: 0;
+}
+
+table{
+    width: 100%;
+    
+}
+
+.first{
+    margin-left: 30px;
+    border-radius: 10px 0 0 10px;
+}
+
+.last{
+    border-radius: 0 10px 10px 0;
+}
+
+.first-head{
+    border-radius: 10px 0 0 0;
+}
+
+.last-head{
+    border-radius: 0 10px 0 0;
 }
 
 
